<resources>
    <string name="app_name">EnGuard</string>

    <!--Facebook Strings-->
    <string name="facebook_app_id">342643696697416</string>
    <string name="fb_login_protocol_scheme">fb342643696697416</string>


    <!--Tutorial Activity Strings-->
    <string name="tutorial_activity_fragment_1_title">Welcome to EnGuard!</string>
    <string name="tutorial_activity_fragment_1_description">Create an account by signing up or connecting with Google or Facebook. Already have an account? Skip the tutorial and log in.</string>
    <string name="tutorial_activity_fragment_2_title">Stay safe!</string>
    <string name="tutorial_activity_fragment_2_description">EnGuard provides multiple levels of security. Choose one of them, with the possibility of upgrading it whenever you want.</string>
    <string name="tutorial_activity_fragment_3_title">Be heard!</string>
    <string name="tutorial_activity_fragment_3_description">Benefit from EnGuard\'s unique features! Record a \"safe word\" which will allow you to trigger a distress signal, if you mention it 3 times in a row.</string>
    <string name="tutorial_activity_fragment_4_title">The last step!</string>
    <string name="tutorial_activity_fragment_4_description">Explore our interactive Heat Map, search for a safer track and help the community by reporting the abuses. No one should fear walking alone on the city streets.</string>

    <!--Welcome Activity Strings-->
    <string name="welcome_activity_primary_greeting_text">Hello!</string>
    <string name="welcome_activity_secondary_greeting_text">Start your journey by creating a new account.</string>
    <string name="welcome_activity_alternate_connection_text">Or connect using</string>
    <string name="tv_google_sign_in_fail">Google sign in failed!</string>
    <string name="tv_google_authentication_failed">Authentication Failed!</string>

    <!--Log In Activity Strings-->
    <string name="log_in_activity_primary_greeting_text">Welcome Back!</string>
    <string name="log_in_activity_secondary_greeting_text">Enter your login credentials to access the features of the app.</string>
    <string name="log_in_activity_redirect_to_sign_up">Don\'t have an account yet?</string>
    <string name="tv_invalid_password_type">Invalid password type!</string>
    <string name="tv_authentication_failed">Authentication failed! Please try again.</string>

    <!--Password Recovery Activity Strings-->
    <string name="tv_forgotten_your_password">Forgotten your password?</string>
    <string name="tv_forgot_password_description">You will receive an verification email that will redirect you to reset your password.</string>
    <string name="tv_password_recovery_failed">Password recovery failed. Please try again.</string>
    <string name="tv_password_recovery_email_sent">A password recovery email has been sent to your inbox.</string>

    <!--Sign Up Activity Strings-->
    <string name="sign_up_activity_primary_greeting_text">Join the community!</string>
    <string name="sign_up_activity_secondary_greeting_text">Enter your new account credentials to access the features of the app.</string>
    <string name="sign_up_activity_redirect_to_log_in">Already have an account?</string>
    <string name="tv_invalid_password">Invalid password type!</string>
    <string name="tv_non_matching_passwords">Passwords don\'t match!</string>
    <string name="tv_sign_up_failure">Something went wrong! Please try again.</string>


    <!--Account Detail Set Up Fragments Strings -->
    <string name="tv_setting_up_your_account">Setting up\nyour account</string>
    <string name="tv_first_name">First Name</string>
    <string name="tv_last_name">Last Name</string>
    <string name="tv_mobile_phone_number">Mobile Phone Number</string>
    <string name="tv_terms_and_conditions"> I confirm that I have read and accepted the <a> Terms and Conditions. </a> </string>
    <string name="tv_privacy_policy">I have read and agreed to the <a> Privacy Policy.</a></string>
    <string name="tv_personal_data_consent">I consent to HearMe analyzing the personal data I supply and create an account to access the voice recognition and conversation labeling functionalities.</string>
    <string name="tv_choose_your_security_level">Choose your \nsecurity level</string>

    <!--Code Verification Fragment Strings-->
    <string name="tv_insert_your_sms_pass_code">Insert your\nSMS pass code.</string>
    <string name="tv_resend_code_in">Resend code in.</string>
    <string name="tv_invalid_pass_code">The SMS pass code you have entered\nis incorrect!</string>
    <string name="tv_code_not_received">Didn\'t receive a code?</string>


    <!--Map Activity-->
    <string name="title_activity_map">Map</string>
    !
    <string name="tv_location_permission_denied">Please try again and grant access to use the location.</string>
    !
    <string name="tv_permission_required_toast">Location permission is required.</string>
    <string name="tv_sos_button_toast">Starting alert</string>
    <string name="tv_my_location_button_toast">MyLocation button clicked</string>
    <string name="tv_current_location">Current location:\n</string>

    <!--Voice Recording Activity-->
    <string name="tv_grant_permission">Permission granted</string>
    <string name="tv_deny_permission">Permission denied</string>
    <string name="tv_recording">Recording...</string>
    <string name="tv_playing">Playing...</string>

    <!--Contact Selector Activity-->
    <string name="tv_select_contacts_title">Select your safe contact</string>
    <string name="tv_add_contact_btn">Add contact</string>
    <string name="tv_finish_set_up">Finish Set Up</string>
    <string name="tv_select_contact_description">Choose a trustful person that will receive your SOS signal when needed.</string>


    <!--Generic Views-->
    <!--Buttons-->
    <string name="btn_log_in">Log In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_show">Show</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_sos">SOS</string>
    <string name="btn_send_password_reset">Send Password Reset</string>
    <string name="btn_record">RECORD</string>
    <string name="btn_stop_record">STOP</string>
    <string name="btn_play">PLAY</string>
    <string name="btn_stop">STOP</string>


    <!--TextView Texts-->
    <string name="tv_email">EMAIL</string>
    <string name="tv_password">PASSWORD</string>
    <string name="tv_confirm_password">CONFIRM PASSWORD</string>
    <string name="tv_lorem_ipsum_title">Lorem ipsum amet consectetuer</string>
    <string name="tv_lorem_ipsum_description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.</string>
    <string name="tv_show">SHOW</string>
    <string name="tv_invalid_email_address">Invalid email address!</string>
    <string name="tv_select_a_contact">Select a contact</string>

    <!--EditText Hints-->
    <string name="et_email_hint">something@something.com</string>
    <string name="et_password_hint">At least 8 characters</string>
    <string name="et_confirm_password_hint">Your password should match</string>
    <string name="et_first_name_hint">Jane</string>
    <string name="et_last_name_hint">Doe</string>
    <string name="et_phone_number">123-456-7890</string>
    <string name="location_permission_denied">Please try again and grant access to use the location.</string>
    <string name="permission_required_toast">Location permission is required.</string>

    <!--Other-->
    <string name="quota_exceeded">Quota exceeded.</string>
    <string name="tv_resend_code">Resend code in %d seconds</string>


</resources>