<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogInActivity"
    android:padding="32dp">

    <RelativeLayout
        android:id="@+id/navigationSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/backFromLogInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            >

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:scaleType="fitCenter"
                android:background="@drawable/ic_arrow"
                android:layout_marginTop="1dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/btn_back"
                android:textAllCaps="false"
                android:fontFamily="@font/segoeuib"
                android:textColor="@color/colorSecondary"
                android:textSize="16sp"/>

        </LinearLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_logo"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottomSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigationSection">

        <LinearLayout
            android:id="@+id/welcomeSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="64dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuib"
                android:text="@string/log_in_activity_primary_greeting_text"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/segoeuisl"
                android:text="@string/log_in_activity_secondary_greeting_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorSecondary"
                android:textSize="16sp" />


        </LinearLayout>

        <com.girlesc.hearme.views.CustomEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:hint="@string/et_email_hint"
            android:inputType="textEmailAddress"
            app:title="@string/tv_email"/>

        <com.girlesc.hearme.views.CustomEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:hint="@string/et_password_hint"
            android:inputType="textPassword"
            app:title="@string/tv_password"/>

        <LinearLayout
            android:id="@+id/forgotPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_forgot_password"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/seguisb"
                android:includeFontPadding="false"
                android:text="@string/tv_forgot_password"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_log_in"
            android:textAllCaps="false"
            android:fontFamily="@font/segoeuib"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@drawable/bg_button_focused"
            android:elevation="4dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_activity_redirect_to_sign_up"
                android:fontFamily="@font/seguisb"
                android:textColor="@color/colorSecondary"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/signUpFromLogInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:text="@string/btn_sign_up"
                android:textAllCaps="false"
                android:fontFamily="@font/segoeuib"
                android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>