<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="32dp"
tools:context=".activities.PasswordRecoveryActivity">

<LinearLayout
    android:id="@+id/backBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_centerVertical="true"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/ic_arrow"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeuib"
        android:includeFontPadding="false"
        android:text="@string/btn_back"
        android:textAllCaps="false"
        android:textColor="@color/colorSecondary"
        android:textSize="16sp" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@id/resetPasswordBtn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/backBtn">

    <LinearLayout
        android:id="@+id/welcomeSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeuib"
            android:text="@string/tv_select_contacts_title"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeuisl"
            android:text="@string/tv_select_contact_description"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button_unfocused"
        android:elevation="4dp"
        android:fontFamily="@font/segoeuib"
        android:textSize="16sp"
        android:text="@string/tv_add_contact_btn"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/txt_contacts_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/txt_contacts_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:textSize="24sp"/>

</LinearLayout>

<Button
    android:id="@+id/resetPasswordBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/bg_button_focused"
    android:elevation="4dp"
    android:fontFamily="@font/segoeuib"
    android:text="@string/tv_finish_set_up"
    android:textAllCaps="false"
    android:textColor="@android:color/white"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>