<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_account_setup" />

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/segoeuib"
            android:text="Setting up\nyour account"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.girlesc.enguard.views.CustomEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:hint="@string/et_first_name_hint"
                android:inputType="textPersonName"
                app:title="@string/tv_first_name" />

            <com.girlesc.enguard.views.CustomEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:hint="@string/et_last_name_hint"
                android:inputType="textPersonName"
                app:title="@string/tv_last_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/seguisb"
                android:letterSpacing="0.2"
                android:text="@string/tv_mobile_phone_number"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondary"
                android:textSize="12sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/phoneSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/phonePrefixBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:layout_marginEnd="8dp"
                            android:rotation="270"
                            android:src="@drawable/ic_arrow" />

                        <TextView
                            android:id="@+id/phonePrefixTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/segoeuib"
                            android:includeFontPadding="false"
                            android:text="RO +40"
                            android:textColor="@color/colorSecondary"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/colorSecondary" />


                    <EditText
                        android:id="@+id/fieldET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:backgroundTint="@android:color/transparent"
                        android:fontFamily="@font/segoeui"
                        android:hint="@string/et_phone_number"
                        android:includeFontPadding="false"
                        android:inputType="phone"
                        android:letterSpacing="0"
                        android:padding="0dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phoneSection" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:buttonTint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/seguisb"
                android:text="@string/tv_terms_and_conditions"
                android:textAllCaps="false"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/privacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:buttonTint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/seguisb"
                android:text="@string/tv_privacy_policy"
                android:textAllCaps="false"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/consentAI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:buttonTint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/seguisb"
                android:text="@string/tv_personal_data_consent"
                android:textAllCaps="false"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
